sets ff animation img to fixed to improve visibility when scrolling

--- a/game/game-styles.css
+++ b/game/game-styles.css
@@ -230,19 +230,16 @@ input[type="radio"]:checked + img {
 }
 
 /* 🌛 FF-Animation ⭐ */
-/* For img */
-.anim-ff-img-start{
-    position: absolute;
-    width: 50vw;
-    transform: translateY(-50vh);
-    z-index: -1;
-    left: 25%;
-}
 
 /* For img */
 .anim-ff-drop-moon{
     animation: drop-moon 1.2s linear forwards;
     animation-delay: .40s;
+    position: fixed;
+    width: 50vw;
+    transform: translateY(-50vh);
+    z-index: -1;
+    left: 25%;
 }
 
 /* For body */
